# GDD

./: .#DESCRIPTION.1.4  MD5  NEWS  README  configure  configure.ac  configure.win  version
R/: GDD.R  zzz.R
inst/fonts/: basefont.mapping
man/: GDD.Rd  GDDfont.Rd
src/: GDD.c  GDD.h  GDDtalk.c  GDDtalk.h  Makevars.win  gddconfig.h.in  s2u.c
